--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.mvc.view.suffix: .jsp
 #spring.datasource.url=jdbc:mysql://mysql3000.mochahost.com:3306/compuve1_ventsystemspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/ventsystemspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:postgresql://ec2-18-191-189-102.us-east-2.compute.amazonaws.com:5432/gladius05
-spring.datasource.url=jdbc:postgresql://ec2-18-191-189-102.us-east-2.compute.amazonaws.com:5432/gladius_autenticacion
+#spring.datasource.url=jdbc:postgresql://ec2-18-191-189-102.us-east-2.compute.amazonaws.com:5432/gladius_autenticacion
+spring.datasource.url = ${sqlURL}
 spring.datasource.username=postgres
 spring.datasource.password=@balkaned2020
 spring.resources.add-mappings=true
