--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 
-#spring.datasource.url=jdbc:mysql://mysql3000.mochahost.com:3306/compuve1_ventsystemspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.url=jdbc:mysql://localhost:3306/ventsystemspring?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:postgresql://ec2-18-191-189-102.us-east-2.compute.amazonaws.com:5432/gladius05
 spring.datasource.url=jdbc:postgresql://ec2-18-191-189-102.us-east-2.compute.amazonaws.com:5432/gladius_autenticacion
 #spring.datasource.url = ${sqlURL}
 spring.datasource.username=postgres
 spring.datasource.password=@balkaned2020
 spring.resources.add-mappings=true
-spring.resources.static-locations=classpath:/WEB-INF/
+spring.resources.static-locations=classpath:/resources/
 
-server.servlet.contextPath=/gladiusv4
+server.servlet.contextPath=/authentication
 server.port=8182
 
 app.version=@project.version@
