--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<groupId>com.balkaned</groupId>
 	<artifactId>gladius</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gladius</name>
-	<description>Gladius.v4 project for Spring Boot</description>
+	<name>Authentication</name>
+	<description>Authentication.v4 project for Spring Boot</description>
 	<packaging>war</packaging>
 	<properties>
 		<java.version>17</java.version>
