--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 <http create-session="ifRequired">
 
     <web-app>
-        <display-name>Gladius</display-name>
+        <display-name>Authentication</display-name>
         <welcome-file-list>
             <welcome-file>index.jsp</welcome-file>
         </welcome-file-list>
