--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,18 @@
 			<artifactId>log4j-core</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.748</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.20.5</version>
+		</dependency>
+
 	</dependencies>
 
 
