--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,13 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.20.5</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
