--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.1-SNAPSHOT</version>
+		<version>2.7.14</version>
 		<!--<version>2.1.3.RELEASE</version>-->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
@@ -16,7 +16,7 @@
 	<description>Gladius.v4 project for Spring Boot</description>
 	<packaging>war</packaging>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 
@@ -62,9 +62,8 @@
 			<version>1.2</version>
 		</dependency>-->
 		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
-			<version>2.0.0</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
 		</dependency>
 
 
@@ -118,6 +117,7 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.4</version>
 		</dependency>
+
 	</dependencies>
 
 
