Correción en Legajos controlador genérico para subir y descargar Documentos en PDF en AWS_FTP_Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ server.servlet.contextPath=/gladius
 server.port=8185
 
 app.version=@project.version@
+
+spring.servlet.multipart.max-file-size=40MB
+spring.servlet.multipart.max-request-size=50MB
