Ajustes en pom.xml para despliegue en AWS

--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 	<description>Gladius.v4 project for Spring Boot</description>
 	<packaging>war</packaging>
 	<properties>
-		<java.version>11</java.version>
+		<!--<java.version>11</java.version>-->
+		<java.version>8</java.version>
 	</properties>
-
 
 	<dependencies>
 		<dependency>
@@ -44,13 +44,11 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
@@ -86,7 +84,6 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.4</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
@@ -124,7 +121,6 @@
 			<artifactId>commons-net</artifactId>
 			<version>3.9.0</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
