--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--<configuration>
+					<jvmArguments>-Xmx16m</jvmArguments>
+					<jvmArguments>-Xmx256m</jvmArguments>
+				</configuration>-->
 			</plugin>
 		</plugins>
 	</build>
