--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 			<artifactId>jasperreports</artifactId>
 			<version>6.20.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.10</version>
+		</dependency>
 		<!--<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
