--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
+		<!--<version>3.2.3</version>-->
 		<version>2.7.14</version>
 		<!--<version>2.1.3.RELEASE</version>-->
 		<relativePath/> <!-- lookup parent from repository -->
@@ -17,6 +18,8 @@
 	<!--<packaging>jar</packaging>-->
 	<packaging>war</packaging>
 	<properties>
+		<!--<java.version>21</java.version>-->
+		<!--<java.version>17</java.version>-->
 		<java.version>11</java.version>
 		<!--<java.version>8</java.version>-->
 	</properties>
@@ -54,6 +57,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -99,7 +103,25 @@
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
 			<version>6.20.5</version>
+			<!--<version>5.6.0</version>-->
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-fonts</artifactId>
+			<version>6.20.6</version>
+			<!--<version>5.6.0</version>-->
+		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>6.20.6</version>
+		</dependency>
+		<!--<dependency>
+			<groupId>jasperreports</groupId>
+			<artifactId>jasperreports-javaflow</artifactId>
+			<version>3.6.0</version>
+		</dependency>-->
+
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
